[gd_scene load_steps=5 format=3 uid="uid://icbkrb75bslc"]

[ext_resource type="Script" path="res://scripts/bomb_spawner.gd" id="1_cjuny"]
[ext_resource type="PackedScene" uid="uid://tmgj130g0t8g" path="res://scenes/bomb.tscn" id="2_clhut"]
[ext_resource type="PackedScene" uid="uid://cx1hqhorn20kj" path="res://scenes/molotow.tscn" id="3_vyweu"]
[ext_resource type="Texture2D" uid="uid://mwp1wd87nsf0" path="res://assets/sprites/bg_pickup_area.png" id="4_0hyon"]

[node name="BombSpawner" type="Node2D"]
position = Vector2(-1408, -320)
scale = Vector2(1, 1.00487)
script = ExtResource("1_cjuny")
bombs = Array[PackedScene]([ExtResource("2_clhut"), ExtResource("3_vyweu")])

[node name="BgPickupArea" type="Sprite2D" parent="."]
texture = ExtResource("4_0hyon")

[node name="SpawnTimer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
